tests/snapshots/run_wpt_conformance__onnx_greater_float32_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float32 broadcast 3D to 4D",
    "onnx",
    "PASS",
)
